--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -296,7 +296,7 @@
    },
    "source": [
     "###  IEEE Spectrum ranking\n",
-    "![](../figures/ieee_languages_2017.png)"
+    "![](../figures/ieee_languages_2018.png)"
    ]
   },
   {
@@ -307,8 +307,20 @@
     }
    },
    "source": [
-    "### StackOverflow statistics\n",
-    "![](../figures/stackoverflow_languages_2017.png)"
+    "### StackOverflow Insights\n",
+    "https://insights.stackoverflow.com/trends?tags=java%2Cc%2B%2B%2Cpython%2Cc%23%2Cjavascript%2Cphp%2Cr\n",
+    "![](../figures/stackoverflow_insights_2019.png)\n",
+    "\n",
+    "https://insights.stackoverflow.com/survey/2018#most-loved-dreaded-and-wanted\n",
+    "\n",
+    "Most Loved (3rd)\n",
+    "\n",
+    "Most Dreaded (>25th)\n",
+    "\n",
+    "Most Wanted (1st)\n",
+    "\n",
+    "![](../figures/stackoverflow_most_loved.png)\n",
+    "\n"
    ]
   },
   {
@@ -361,7 +373,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
