--- a/notebooks/02-Jupyter-Notebook.ipynb
+++ b/notebooks/02-Jupyter-Notebook.ipynb
@@ -245,19 +245,17 @@
     "You can pull up remote code using `loadpy`\n",
     "\n",
     "```python\n",
-    "loadpy http://matplotlib.org/mpl_examples/mplot3d/2dcollections3d_demo.py\n",
+    "loadpy loadpy https://matplotlib.org/_downloads/3958e02c30f3c9f9ed7a1cf34bfcf4ad/cohere.py\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#loadpy http://matplotlib.org/mpl_examples/mplot3d/2dcollections3d_demo.py"
+    "# loadpy  https://matplotlib.org/_downloads/3958e02c30f3c9f9ed7a1cf34bfcf4ad/cohere.py"
    ]
   },
   {
@@ -318,7 +316,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
