update intro, now python 3.7

--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -62,7 +62,7 @@
     "* Update to the 'modern way' of doing things\n",
     "* By fixing major flaws, it became backward-incompatible (most Python 2 code doesn't run under Python 3)\n",
     "* All essential scientific packages are ported to Python 3\n",
-    "* The latest version is **Python 3.6** - December 23, 2016 - which is used in this course"
+    "* The latest version is **Python 3.7** - October, 2018 - which is used in this course"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
