Rephrasing and update on ways of running

--- a/notebooks/01-How-to-Run-Python-Code.ipynb
+++ b/notebooks/01-How-to-Run-Python-Code.ipynb
@@ -30,7 +30,7 @@
     }
    },
    "source": [
-    "* One thing that distinguishes Python from other programming languages is that it is *interpreted* rather than *compiled*. This means that the user has more freedom and allows the code to be more dynamic, though the disadvantage is that it is slightly slower. "
+    "* Unlike traditional languages such as C*, Fortran, Assembly or Java, Python is *interpreted* rather than *compiled*. This lends itself to a culture of sharing code, though the disadvantage is that it is often slower. "
    ]
   },
   {
@@ -41,7 +41,7 @@
     }
    },
    "source": [
-    "* The freedom allows programming to be interactive in a way that is not directly possible with compiled languages like Fortran, C, or Java."
+    "* Interpreted languages also allow programming to be interactive in a way that is not directly possible with compiled languages like Fortran, C, or Java."
    ]
   },
   {
@@ -52,7 +52,7 @@
     }
    },
    "source": [
-    "### There are four primary ways you can run Python code:"
+    "### There are several ways you can run Python code:"
    ]
   },
   {
@@ -63,18 +63,7 @@
     }
    },
    "source": [
-    "* the *Python interpreter*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* the *IPython interpreter*"
+    "* the *Python/IPython interpreter*"
    ]
   },
   {
@@ -101,6 +90,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* *Integrated Development Environment*, such as Spyder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -118,7 +114,7 @@
     }
    },
    "source": [
-    "The Python interpreter can be started by installing the Python language and typing ``python`` at the command prompt. On Windows Python interpreter can be invoked from the Command Prompt application or from the Start menu.\n",
+    "The Python interpreter can be started by typing ``python`` at the command prompt. In Anaconda for Windows, this is replaced by IPython below. \n",
     "```\n",
     "Python 3.6.4 | packaged by conda-forge | (default, Dec 23 2017, 16:31:06) \n",
     "[GCC 4.8.2 20140120 (Red Hat 4.8.2-15)] on linux\n",
@@ -189,7 +185,7 @@
     }
    },
    "source": [
-    "It can be started by typing ``ipython`` at the command prompt (or from Start menu on Windows):\n",
+    "It can be started by typing ``ipython`` at the command prompt or from Jupyter Navigator in Windows Anaconda:\n",
     "```\n",
     "$ ipython\n",
     "```"
@@ -204,13 +200,12 @@
    },
    "source": [
     "```\n",
-    "Python 3.6.4 | packaged by conda-forge | (default, Dec 23 2017, 16:31:06) \n",
+    "Jupyter QtConsole 4.4.3\n",
+    "Python 3.7.3 (default, Mar 27 2019, 17:13:21) [MSC v.1915 64 bit (AMD64)]\n",
     "Type 'copyright', 'credits' or 'license' for more information\n",
-    "IPython 6.2.1 -- An enhanced Interactive Python. Type '?' for help.\n",
-    "```\n",
-    "```ipython\n",
+    "IPython 7.4.0 -- An enhanced Interactive Python. Type '?' for help.\n",
+    "\n",
     "In [1]: \n",
-    " \n",
     "```"
    ]
   },
@@ -309,7 +304,16 @@
     }
    },
    "source": [
-    "An extended IPython reference card is available [here](https://damontallen.github.io/IPython-quick-ref-sheets/)."
+    "An extended IPython reference card is available [here](https://damontallen.github.io/IPython-quick-ref-sheets/). Try it below!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str?"
    ]
   },
   {
@@ -434,9 +438,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -448,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
