--- a/notebooks/01-How-to-Run-Python-Code.ipynb
+++ b/notebooks/01-How-to-Run-Python-Code.ipynb
@@ -30,7 +30,7 @@
     }
    },
    "source": [
-    "* Unlike traditional languages such as C*, Fortran, Assembly or Java, Python is *interpreted* rather than *compiled*. This lends itself to a culture of sharing code, though the disadvantage is that it is often slower. "
+    "* Unlike traditional languages such as C and its variants or Fortran, Python is *interpreted* rather than *compiled*. This means that the same code can be executed in different operating systems; it also lends itself to a culture of sharing code (open source). The disadvantage is that it is often slower. "
    ]
   },
   {
