Minor changes:  added explanatory markdowns and split some code cells into multiple for better visualisation of the processes up until Exercise2.

--- a/notebooks/14-Numpy-Intro.ipynb
+++ b/notebooks/14-Numpy-Intro.ipynb
@@ -41,7 +41,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -262,6 +261,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Say we forget to use the square brackets:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -282,7 +288,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "d6ba304a-3ec3-4cf0-9328-525fd1ae0d43"
     },
@@ -293,6 +298,13 @@
    "outputs": [],
    "source": [
     "a = np.array([1,2,3,4]) # RIGHT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.ndarray works differently to np.array: here you specify the dimensions within the first set of square backets."
    ]
   },
   {
@@ -309,6 +321,13 @@
    "outputs": [],
    "source": [
     "np.ndarray([1,2,3,4]) #  ndarray is a low level method. Use np.array() instead"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Result: an 'empty' 4-D array."
    ]
   },
   {
@@ -363,7 +382,7 @@
    },
    "outputs": [],
    "source": [
-    "# for integers, np.arange is same as range but returns an array insted of a list \n",
+    "# for integers, np.arange is same as range but returns an array instead of a list \n",
     "np.array( range(1,9,2) )"
    ]
   },
@@ -553,6 +572,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, you can get multiple outputs in whatever way you'd like. The keyword for this argument is 'size', but that's optional."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
      "id": "54ba4e3c-1500-49a8-82e1-94b53f6638fe"
@@ -593,6 +619,16 @@
    "source": [
     "x = np.linspace(-5, 5, 3)\n",
     "y = np.linspace(10, 40, 4)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x2d, y2d = np.meshgrid(x, y)\n",
     "print(x2d)\n",
     "print(y2d)"
@@ -610,7 +646,7 @@
    },
    "source": [
     "### Transpose arrays \n",
-    "This can be very useful when dealing with grids"
+    "This can be very useful when dealing with grids; there are several ways:"
    ]
   },
   {
@@ -619,13 +655,14 @@
    "metadata": {
     "nbpresent": {
      "id": "44add5ea-6c3d-4548-b3a2-bf84e6106a6c"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "print(y2d)\n",
-    "print(np.transpose(y2d)) # using a numpy function\n",
-    "print(y2d.transpose())   # using the method of y2d\n",
+    "print(y2d,'\\n')\n",
+    "print(np.transpose(y2d),'\\n') # using a numpy function\n",
+    "print(y2d.transpose(),'\\n')   # using the method of y2d\n",
     "print(y2d.T)             # using the property of y2d\n"
    ]
   },
@@ -676,6 +713,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "23948ec0-480d-413a-ab93-a24dd1949a52"
@@ -687,6 +733,13 @@
    "outputs": [],
    "source": [
     "a[2:9:3] # [start:end:step]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice, the 'end' number, 9, lies out of bounds. We will find the end-index is never inluded."
    ]
   },
   {
@@ -719,6 +772,13 @@
    "outputs": [],
    "source": [
     "a[-2] # negative index counts from the end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we started counting 'down' from -1 (and not -0!)."
    ]
   },
   {
@@ -791,7 +851,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "a660e5c1-ca74-4317-841c-88dd2b974f30"
     }
@@ -818,7 +877,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "00f3dba9-818d-4002-9040-1f043b7679c6"
     }
@@ -832,7 +890,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "571862ce-eafc-4031-87c3-868cc8747bb8"
     }
@@ -846,7 +903,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "90ecb1c9-d482-43af-9088-82eeb430f0a5"
     }
@@ -879,9 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#a[]"
@@ -1525,7 +1579,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "484c1561-5a07-425e-a56d-8af2ff9a7094"
     }
@@ -1539,7 +1592,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "22202376-6934-490e-bd31-aaf7017cea05"
     }
@@ -1669,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "ef21490b-e603-4991-a0df-0ebdccef705b"
@@ -1686,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "24ca4668-8118-4652-bc6a-3fc80dd52b2c"
@@ -1701,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "8e131b42-9337-499d-9192-e8250ca8ae6c"
@@ -1732,7 +1784,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "84c93559-ddbc-401b-8c9f-ec2850ba18d4"
     }
@@ -2022,7 +2073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   },
   "nbpresent": {
    "slides": {
