Minor changes in Functions
fibonnaci function reworked
lambda functions is now bonus material

--- a/notebooks/10-Defining-Functions.ipynb
+++ b/notebooks/10-Defining-Functions.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "16"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,28 +165,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "### 'def' allows us to define a function and call it 'fibonacci'\n",
     "## 'N' allows us to pass an argument (value/statement) into the function, in this case, 'N' will be a number of our choice. \n",
     "\n",
-    "def fibonacci(N):\n",
-    "    L = []                  # 1\n",
+    "def fibonacci(n):\n",
+    "    fseq = []               # 1\n",
     "    a, b = 0, 1             # 2\n",
-    "    while len(L) < N:       # 3\n",
+    "    while len(fseq) < n:    # 3\n",
     "        a, b = b, a + b     # 4\n",
-    "        L.append(a)         # 5\n",
+    "        fseq.append(a)      # 5\n",
     "\n",
-    "    return L                # 6\n",
+    "    return fseq             # 6\n",
     "\n",
-    "# 1    'L' creates an empty data set, so that we can put data into it and save. \n",
+    "# 1    'fseq' creates an empty list, so that we can put data into it and save. \n",
     "# 2    Here we are just defining variables 'a, b' to the starting numbers '0, 1'\n",
-    "# 3    Now we start a continous loop 'while' and it continues indefinitely until the length(L) is > 'N' before stopping\n",
-    "# 4     Do some maths and save over the values 'a, b' This allows us to save the value of 'a' into the empty dataset 'L'.\n",
+    "# 3    Now we start a continous loop 'while' and it continues indefinitely until the length(fseq) is > 'n' before stopping\n",
+    "# 4    Do some maths and save over the values 'a, b' This allows us to save the value of 'a' into the empty dataset 'fseq'.\n",
     "# 5    We append the data so that it does not overwrite previous values. \n",
-    "# 6     Return 'L' to python "
+    "# 6    Return 'fseq' "
    ]
   },
   {
@@ -197,12 +197,12 @@
     }
    },
    "source": [
-    "Now we have a function named ``fibonacci`` which takes a single argument ``N``, does something with this argument, and ``return``s a value; in this case, a list of the first ``N`` Fibonacci numbers:"
+    "Now we have a function named ``fibonacci`` which takes a single argument ``n``, does something with this argument, and ``return``s a value; in this case, a list of the first ``n`` Fibonacci numbers:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +213,7 @@
        "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Python functions can return any Python object, simple or compound\n"
+    "* Python functions can return any Python object, simple or compound\n",
+    "    \n",
+    "    * Try modifying the function to return only two values, a and b. Test it with the following function call:\n",
+    "```\n",
+    "n_minus_1,n = fibonacci(10)\n",
+    "print( 'n_minus_1=',n_minus_1,'n=',n)\n",
+    "```"
    ]
   },
   {
@@ -263,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -275,15 +281,15 @@
      "evalue": "fibonacci() takes 1 positional argument but 3 were given",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-a57b23ad92fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfibonacci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# This doesn't work?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Why?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Well, we have not told the function that 'a, b' should be the values '0, 2'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Time to redesign the function a bit!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: fibonacci() takes 1 positional argument but 3 were given"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-5f29750ef87c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfibonacci\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# This doesn't work?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Why?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Well, we have not told the function that 'a, b' should be the values '0, 2'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Time to redesign the function a bit!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: fibonacci() takes 1 positional argument but 3 were given"
      ]
     }
    ],
    "source": [
-    "fibonacci(10, 0, 2)\n",
+    "fibonacci(10, 1, 1)\n",
     "# This doesn't work? \n",
     "# Why?\n",
     "# Well, we have not told the function that 'a, b' should be the values '0, 2'\n",
@@ -304,18 +310,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fibonacci(N, a=0, b=1):\n",
+    "def fibonacci(n, a=0, b=1):\n",
     "    \"\"\"Calculate Fibonacci sequence\"\"\"\n",
-    "    L = []                  # 1\n",
-    "    while len(L) < N:       # 3\n",
-    "        a, b = b, a + b     # 4\n",
-    "        L.append(a)         # 5\n",
+    "    fseq = []                  # 1\n",
+    "    while len(fseq) < n:       # 3\n",
+    "        a, b = b, a + b        # 4\n",
+    "        fseq.append(a)         # 5\n",
     "\n",
-    "    return L                # 6"
+    "    return fseq                # 6"
    ]
   },
   {
@@ -327,22 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 4, 7, 11, 18, 29, 47, 76, 123, 199]"
+       "[34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fibonacci(b=3, a=1, N=10)"
+    "fibonacci(b=34, a=21, n=10)"
    ]
   },
   {
@@ -360,12 +366,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's calculate the potential temperature ($\\theta$) of the atmosphere. Below is a function to do that, and from its docstring you can understand what data should be put in, and what comes out. (See, how useful docstrings are? Always write them in your code!)."
+    "Now let's calculate the potential temperature ($\\theta$) of the atmosphere. Below is a function to do that, and from its *docstring* you can understand what data should be put in, and what comes out. (See, how useful docstrings are? Always write them in your code!)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,12 +415,14 @@
     "collapsed": true
    },
    "source": [
-    "Can you calculate $\\theta$ for a \"real\" temperature of 14$^\\circ$C and a pressure of 1003 hPa? **Be careful with units!**"
+    "Can you calculate $\\theta$ for a \"real\" temperature of 14$^\\circ$C and a pressure of 1003 hPa? \n",
+    "\n",
+    "*Note that 0 K = −273.15 °C and 1 hPa=100 Pa*\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,14 +440,14 @@
    "source": [
     "## ``*args`` and ``**kwargs``: Flexible Arguments\n",
     "How about a a function which you don't initially know how many arguments there are? \n",
-    "We can use the special form ``*args`` (arguments) and ``**kwargs`` (keyword arguments)to catch all the arguments that are passed.\n",
+    "We can use the special form ``*args`` (arguments) and ``**kwargs`` (keyword arguments) to catch all the arguments that are passed.\n",
     "\n",
     "Here is an example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -499,23 +507,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "args = (1, 2, 3)\n",
-      "kwargs =  {'pi': 3.14}\n",
-      "\n",
-      "compare to this:\n",
-      "\n",
-      "args = ((1, 2, 3), {'pi': 3.14})\n",
-      "kwargs =  {}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inputs = (1, 2, 3)\n",
     "keywords = {'pi': 3.14}\n",
@@ -537,7 +531,7 @@
     }
    },
    "source": [
-    "## Anonymous (``lambda``) Functions\n",
+    "## BoAnonymous (``lambda``) Functions\n",
     "\n",
     "``\"lambda\" [parameter_list]: expression``\n",
     "\n",
@@ -548,20 +542,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "add = lambda x, y: x + y\n",
     "add(1, 2)"
@@ -576,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +608,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,18 +627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'YOB': 1912, 'first': 'Alan', 'last': 'Turing'},\n",
-       " {'YOB': 1906, 'first': 'Grace', 'last': 'Hopper'},\n",
-       " {'YOB': 1956, 'first': 'Guido', 'last': 'Van Rossum'}]"
+       "[{'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
+       " {'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
+       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,18 +650,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'YOB': 1906, 'first': 'Grace', 'last': 'Hopper'},\n",
-       " {'YOB': 1912, 'first': 'Alan', 'last': 'Turing'},\n",
-       " {'YOB': 1956, 'first': 'Guido', 'last': 'Van Rossum'}]"
+       "[{'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
+       " {'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
+       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +675,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While these key functions could certainly be created by the normal, ``def`` syntax, the ``lambda`` syntax is convenient for such short one-off functions like these."
+    "While these key functions could certainly be created by the normal, ``def`` syntax, the ``lambda`` syntax is convenient for such short one-off functions like these.\n",
+    "\n",
+    "This is how it would look like using a standard function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
+       " {'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
+       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def by_lastn(dic):\n",
+    "    return dic['last']\n",
+    "\n",
+    "sorted(data, key=by_lastn)"
    ]
   },
   {
@@ -721,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
