clear notebook output

--- a/notebooks/10-Defining-Functions.ipynb
+++ b/notebooks/10-Defining-Functions.ipynb
@@ -531,7 +531,7 @@
     }
    },
    "source": [
-    "## BoAnonymous (``lambda``) Functions\n",
+    "## Bonus Material: Anonymous (``lambda``) Functions\n",
     "\n",
     "``\"lambda\" [parameter_list]: expression``\n",
     "\n",
