only small changes in the narrative. Luz 17/05/2019

--- a/notebooks/03-Basic-Python-Syntax.ipynb
+++ b/notebooks/03-Basic-Python-Syntax.ipynb
@@ -49,22 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lower: [0, 1, 2, 3, 4]\n",
-      "upper: [5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set the midpoint\n",
     "midpoint = 5\n",
@@ -114,7 +105,7 @@
     }
    },
    "source": [
-    "The script starts with a comment (this means that python won't read this line....very useful!):\n",
+    "The script starts with a comment (this means that python won't read this line....but this is very useful to provide information about your code):\n",
     "``` python\n",
     "# set the midpoint\n",
     "```\n",
@@ -166,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -289,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -305,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -353,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -374,7 +365,6 @@
     }
    },
    "source": [
-    "Abusing this flexibility can lead to issues with code readibility – in fact, abusing white space is often one of the primary means of intentionally obfuscating code (which some people do for sport).\n",
     "Using whitespace effectively can lead to much more readable code, \n",
     "especially in cases where operators follow each other – compare the following two expressions for exponentiating by a negative number:\n",
     "``` python\n",
@@ -384,7 +374,6 @@
     "``` python\n",
     "x = 10 ** -2\n",
     "```\n",
-    "I find the second version with spaces much more easily readable at a single glance.\n",
     "Most Python style guides recommend using a single space around binary operators, and no space around unary operators.\n",
     "We'll discuss Python's operators further in [Basic Python Semantics: Operators](04-Semantics-Operators.ipynb)."
    ]
@@ -405,24 +394,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2 * (3 + 4)"
    ]
@@ -440,21 +418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example\n",
     "L = [4,2,3,1]\n",
@@ -483,7 +453,7 @@
    "source": [
     "## Strings! \n",
     "\n",
-    "One of the most simple and important aspects of python you will be using constantly, will be strings! \n",
+    "One of the most simple and important aspects of python you will be using constantly will be strings! \n",
     "\n",
     "Strings are designated by single or double quotation marks. \n",
     "\n",
@@ -503,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -514,9 +484,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "String:  <class 'str'> 4\n",
-      "Integer:  <class 'int'> 4\n",
-      "Float:  <class 'float'> 4.0\n"
+      "('String: ', <type 'str'>, '4')\n",
+      "('Integer: ', <type 'int'>, 4)\n",
+      "('Float: ', <type 'float'>, 4.0)\n"
      ]
     }
    ],
@@ -575,21 +545,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
