--- a/notebooks/01-How-to-Run-Python-Code.ipynb
+++ b/notebooks/01-How-to-Run-Python-Code.ipynb
@@ -235,7 +235,8 @@
    "source": [
     "Regardless, we can execute code line by line just as we did before:\n",
     "``` ipython\n",
-    "In [1]: 1 + 1\n",
+    "In [1]: 3+1\n",
+    "   \n",
     "Out[1]: 2\n",
     "\n",
     "In [2]: x = 5\n",
@@ -434,9 +435,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -448,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
