--- a/notebooks/06-Built-in-Scalar-Types.ipynb
+++ b/notebooks/06-Built-in-Scalar-Types.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "nbpresent": {
      "id": "0b25b541-dbb6-4d67-a825-eb11f6581137"
@@ -76,13 +76,13 @@
        "int"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = 1\n",
+    "x = 3\n",
     "type(x)"
    ]
   },
@@ -1253,9 +1253,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1267,7 +1267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   },
   "nbpresent": {
    "slides": {
