--- a/notebooks/borrame.ipynb
+++ b/notebooks/borrame.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "### Python philosophy (continued) \n",
     "\n",
-    "* Don't fight the environment and go with the flow."
+    "* Don't fightekdaf;lkad;lfka'd;lkfa'd;lkfa'ldkflow."
    ]
   },
   {
@@ -373,21 +373,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
