--- a/index.ipynb
+++ b/index.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Introduction to Python in Environmental Sciences](https://ueapy.github.io/pythoncourse2019/)\n",
-    "*EnvEast & Cefas workshop*"
+    "# [Introduction to Python for Environmental Sciences](https://ueapy.github.io/pythoncourse2019/)\n",
+    "*EnvEast & Cefas Course*"
    ]
   },
   {
@@ -47,9 +47,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
