fixed datetime issue in pandas notebook

--- a/notebooks/18-Pandas-Intro.ipynb
+++ b/notebooks/18-Pandas-Intro.ipynb
@@ -665,40 +665,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlations and regressions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Is there correlations between the timeseries we loaded?\n",
-    "* First, let's take a glance at the whole `DataFrame` using a fancy `scatter_matrix` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pandas.tools.plotting import scatter_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with plt.style.context('ggplot'):\n",
-    "#     scatter_matrix(air_quality, figsize=(7, 7))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Computing correlations"
    ]
   },
@@ -944,25 +910,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### scikit-learn\n",
-    "See examples at http://scikit-learn.org/stable/modules/linear_model.html#ordinary-least-squares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn import linear_model\n",
-    "# lr = linear_model.LinearRegression()\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "More examples: https://jakevdp.github.io/PythonDataScienceHandbook/05.06-linear-regression.html"
    ]
   },
@@ -1027,7 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mdt = mdates.date2num(df.index.astype(pd.datetime))"
+    "# mdt = mdates.date2num(df.index)"
    ]
   },
   {
@@ -1183,9 +1130,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1197,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
