Minor edits in regression plots

--- a/notebooks/16-Futher-plotting.ipynb
+++ b/notebooks/16-Futher-plotting.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "Seaborn is built on top of Matplotlib, and improves it in several ways:\n",
     "\n",
-    "* Has more prebuilt function for statistical plots\n",
+    "* Has more prebuilt functions for statistical plots\n",
     "* The default parameters (looks) are more pleasing\n",
     "* Has predefine styles can be easily switched between\n",
-    "* Understand data stored in pandas dataframes \n",
+    "* Understands data stored in pandas dataframes \n",
     "    \n",
     "\"If Matplotlib tries to make easy things easy and hard things possible, \n",
     "\n",
@@ -184,8 +184,9 @@
    "outputs": [],
    "source": [
     "# If hue is added, the same variable is used to group data point for regressiona analysis\n",
-    "g = sns.lmplot(x='horsepower', y='lp100km', data=mpg,hue='origin',truncate=True,x_ci='sd')\n",
-    "g.set(xlim=(40, 150))\n",
+    "# Also, local regression method `lowess` was chosen\n",
+    "g = sns.lmplot(x='horsepower', y='lp100km', data=mpg,hue='origin',truncate=True, x_ci='sd',height=6)\n",
+    "g.set(ylim=(4, 25))\n",
     "g.set(ylabel=\"l/100 km\")"
    ]
   },
@@ -230,8 +231,7 @@
    "source": [
     "# Or a Seaborn plot type\n",
     "g = sns.FacetGrid(mpg, col='origin',col_wrap=5)\n",
-    "#g = g.map(sns.relplot, \"horsepower\", \"lp100km\",fit_reg=False)\n",
-    "g = g.map(sns.regplot, \"horsepower\", \"lp100km\")#,fit_reg=False)\n",
+    "g = g.map(sns.regplot, \"horsepower\", \"lp100km\")\n",
     "g.set(ylabel=\"l/100km\")"
    ]
   },
@@ -239,10 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predefined styles\n",
+    "## Predefined styles\n",
     "\n",
     "There are 5 prefdefined styles: `darkgrid`, `whitegrid`, `dark`, `white` and` ticks`.\n",
-    "These can be set with function `set_style`"
+    "These can be set with function `set_style`. \n",
+    "\n",
+    "See [examples](https://python-graph-gallery.com/104-seaborn-themes/) or try out below."
    ]
   },
   {
